@@ -1,3 +1,12 @@
+2007-10-16  Miloslav Trmač  <mitr@redhat.com>
+
+	* userhelper-wrap.c (trap_push, trap_pop): Avoid a warning.
+
+	* userhelper-wrap.c: Don't #include <libwnck/libwnck.h>.
+	* configure.in: Don't require libwnck.
+	* Makefile.am (AM_CFLAGS, userinfo_LDADD, userpasswd_LDADD)
+	(consolehelper_gtk_LDADD): Don't link with libwnck.
+
 2007-09-29  Miloslav Trmač  <mitr@redhat.com>
 
 	* po/LINGUAS: Update.
